--- a/package.json
+++ b/package.json
@@ -2,20 +2,18 @@
   "name": "ts-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/app.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc",
+    "local": "node ./dist/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/fetch-mock": "^7.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node-fetch": "^2.6.2",
     "express": "^4.18.2",
     "faker": "^5.5.3",
     "fetch-mock": "^9.11.0",
@@ -25,10 +23,13 @@
     "node-mocks-http": "^1.12.1",
     "openapi-client-ts": "^1.0.0",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/fetch-mock": "^7.3.5",
+    "@types/mocha": "^10.0.1",
+    "@types/node-fetch": "^2.6.2",
     "@types/express": "^4.17.15",
     "@types/faker": "^6.6.9",
     "@types/jest": "^29.2.5",
@@ -39,6 +40,7 @@
     "express-openapi-validate": "^0.6.1",
     "jest-fetch-mock": "^3.0.3",
     "js-yaml": "^4.1.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "typescript": "^4.9.4"
   }
 }
