--- a/package.json
+++ b/package.json
@@ -15,31 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "faker": "^5.5.3",
-    "fetch-mock": "^9.11.0",
     "jest": "^29.3.1",
     "jest-openapi": "^0.14.2",
-    "node-fetch": "^3.3.0",
-    "node-mocks-http": "^1.12.1",
     "openapi-client-ts": "^1.0.0",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1"
+    "ts-jest": "^29.0.3"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/fetch-mock": "^7.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node-fetch": "^2.6.2",
     "@types/express": "^4.17.15",
-    "@types/faker": "^6.6.9",
-    "@types/jest": "^29.2.5",
-    "@types/js-yaml": "^4.0.5",
     "@types/supertest": "^2.0.12",
-    "app-root-path": "^3.1.0",
-    "chai": "^4.3.7",
-    "express-openapi-validate": "^0.6.1",
-    "jest-fetch-mock": "^3.0.3",
-    "js-yaml": "^4.1.0",
     "supertest": "^6.3.3",
     "typescript": "^4.9.4"
   }
