--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.4.0",
+    "@types/mocha": "^10.0.1",
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "jest-openapi": "^0.14.2",
